<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="30"
        android:weightSum="10"
        android:background="@android:color/holo_blue_bright"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/button_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/small"
            />

        <Button
            android:id="@+id/button_big"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/big"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:background="@drawable/images"
       >

        <Button
            android:id="@+id/button_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/north" />

        <Button
            android:id="@+id/button_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/south" />


        <Button
            android:id="@+id/button_west"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/west" />

        <Button
            android:id="@+id/button_east"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/east" />

        <Button
            android:id="@+id/button_ne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_north"
            android:layout_above="@id/button_east"
            android:layout_toLeftOf="@id/button_east"
            android:layout_toRightOf="@id/button_north"
            android:text="@string/northeast"
            android:layout_toEndOf="@id/button_north"
            android:layout_toStartOf="@id/button_east" />

        <Button
            android:id="@+id/button_nw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_north"
            android:layout_above="@id/button_east"
            android:layout_toRightOf="@id/button_west"
            android:layout_toLeftOf="@id/button_north"
            android:text="@string/northwest"
            android:layout_toEndOf="@id/button_west"
            android:layout_toStartOf="@id/button_north" />

        <Button
            android:id="@+id/button_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_east"
            android:layout_above="@id/button_south"
            android:layout_toLeftOf="@id/button_east"
            android:layout_toRightOf="@id/button_south"
            android:text="@string/southeast"
            android:layout_toStartOf="@id/button_east"
            android:layout_toEndOf="@id/button_south" />

        <Button
            android:id="@+id/button_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_west"
            android:layout_above="@id/button_south"
            android:layout_toLeftOf="@id/button_south"
            android:layout_toRightOf="@id/button_west"
            android:text="@string/southeast"
            android:layout_toStartOf="@id/button_south"
            android:layout_toEndOf="@id/button_west" />

        <Button
            android:id="@+id/button_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/center" />



    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>








